fix(layout): fix not responsive figure

--- a/layouts/partials/head/critical-custom.css
+++ b/layouts/partials/head/critical-custom.css
@@ -44,3 +44,13 @@ body,
     font-weight: normal;
     font-family: "Ubuntu Mono", Consolas, monospace;
 }
+
+figure {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+figure img {
+    max-width: 90%;
+}
